--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
   <header class="header">
-    <img src="/logo.png" alt="Logo" class="logo-top" />
+    <img src="logo.png" alt="Logo" class="logo-top" />
     <h1 class="title">T.A.R.T.I.L</h1>
     <p class="subtitle">Technology-based Assistant for Recitation and Tajwid in Learning</p>
   </header>
 
   <main class="main">
-    <img src="/bg-masjid.png" alt="Masjid Background" class="bg-masjid" />
-    <a href="/page2.html">
+    <img src="bg-masjid.png" alt="Masjid Background" class="bg-masjid" />
+    <a href="page2.html">
       <button class="btn">Ayo Ngaji</button>
     </a>
   </main>
