--- a/page2.html
+++ b/page2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Al-Fatihah</title>
-  <link rel="stylesheet" href="/style2.css" />
+  <link rel="stylesheet" href="style2.css" />
 </head>
 <body>
   <header>
@@ -67,7 +67,7 @@
   </main>
 
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.15.0/dist/tf.min.js"></script>
-  <script src="/script.js"></script>
+  <script src="script.js"></script>
   <script>
     const ayatMap = {
       "1": "بِسْمِ اللَّهِ الرَّحْمَٰنِ الرَّحِيمِ",
